--- a/OneCoreAdmin.Framework/OneCoreAdmin.Framework.csproj
+++ b/OneCoreAdmin.Framework/OneCoreAdmin.Framework.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1BE8018B-3B44-47B8-AAEF-B227174711F2}</ProjectGuid>
+    <ProjectGuid>{4965DC9E-BE5D-4115-B019-BF424D3A0FBF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OneCoreAdmin.Business</RootNamespace>
-    <AssemblyName>OneCoreAdmin.Business</AssemblyName>
+    <RootNamespace>OneCoreAdmin.Framework</RootNamespace>
+    <AssemblyName>OneCoreAdmin.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.10\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,19 +49,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\UsuariosDTO.cs" />
-    <Compile Include="Logic\Seguridad\SeguridadBL.cs" />
+    <Compile Include="Crypto\Encrypting.cs" />
+    <Compile Include="Logging\Loggers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OneCoreAdmin.Data\OneCoreAdmin.Data.csproj">
-      <Project>{13810412-bcdd-4ae7-9e31-efd53edcd9c7}</Project>
-      <Name>OneCoreAdmin.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OneCoreAdmin.Framework\OneCoreAdmin.Framework.csproj">
-      <Project>{4965dc9e-be5d-4115-b019-bf424d3a0fbf}</Project>
-      <Name>OneCoreAdmin.Framework</Name>
-    </ProjectReference>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
