--- a/OneCoreAdmin.Web/OneCoreAdmin.Web.csproj
+++ b/OneCoreAdmin.Web/OneCoreAdmin.Web.csproj
@@ -252,7 +252,10 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MeViewModels.cs" />
     <Compile Include="Models\RequestLoginViewModel.cs" />
+    <Compile Include="Models\RequestUsuariosViewModel.cs" />
     <Compile Include="Models\ResponseLoginViewModel.cs" />
+    <Compile Include="Models\ResponseProcessViewModel.cs" />
+    <Compile Include="Models\ResponseUsuariosViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -285,6 +288,7 @@
     <Content Include="assets\css\jquery-ui.min.css" />
     <Content Include="assets\css\jquery.gritter.min.css" />
     <Content Include="assets\css\prettify.min.css" />
+    <Content Include="assets\css\responsive.dataTables.min.css" />
     <Content Include="assets\css\select2.min.css" />
     <Content Include="assets\css\ui.jqgrid.min.css" />
     <Content Include="assets\font-awesome\4.5.0\css\font-awesome.min.css" />
@@ -345,6 +349,7 @@
     <Content Include="assets\js\buttons.print.min.js" />
     <Content Include="assets\js\chosen.jquery.min.js" />
     <Content Include="assets\js\dataTables.buttons.min.js" />
+    <Content Include="assets\js\dataTables.responsive.min.js" />
     <Content Include="assets\js\dataTables.select.min.js" />
     <Content Include="assets\js\daterangepicker.min.js" />
     <Content Include="assets\js\dropzone.min.js" />
@@ -1161,10 +1166,9 @@
     <Content Include="Scripts\angular\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\angular\i18n\angular-locale_zu.js" />
     <Content Include="Scripts\app\app.js" />
-    <Content Include="Scripts\app\controllers\bancosController.js" />
     <Content Include="Scripts\app\controllers\indexController.js" />
     <Content Include="Scripts\app\controllers\loginController.js" />
-    <Content Include="Scripts\app\factories\operationsFactory.js" />
+    <Content Include="Scripts\app\controllers\usuariosController.js" />
     <Content Include="Scripts\app\factories\securityFactory.js" />
     <Content Include="Scripts\app\onecoreadminApp.js" />
     <Content Include="Scripts\app\_run.js" />
@@ -1172,6 +1176,11 @@
     <Content Include="Scripts\app\app.viewmodel.js" />
     <Content Include="Scripts\app\common.js" />
     <Content Include="Scripts\app\home.viewmodel.js" />
+    <Content Include="Scripts\block-ui\angular-block-ui.css" />
+    <Content Include="Scripts\block-ui\angular-block-ui.js" />
+    <Content Include="Scripts\block-ui\angular-block-ui.min.css" />
+    <Content Include="Scripts\block-ui\angular-block-ui.min.js" />
+    <Content Include="Scripts\block-ui\example.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -1219,6 +1228,9 @@
     <Content Include="Scripts\angular\angular.min.js.map" />
     <Content Include="Scripts\angular\errors.json" />
     <Content Include="Scripts\angular\version.json" />
+    <Content Include="Scripts\block-ui\angular-block-ui.css.map" />
+    <Content Include="Scripts\block-ui\angular-block-ui.js.map" />
+    <Content Include="Scripts\block-ui\angular-block-ui.min.js.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\deviceDetector\ng-device-detector.min.js" />
     <Content Include="Scripts\deviceDetector\re-tree.min.js" />
@@ -1234,6 +1246,9 @@
     <Content Include="Scripts\moment\moment.min.js" />
     <Content Include="Scripts\ngStorage\ngStorage.js" />
     <Content Include="Scripts\ngStorage\ngStorage.min.js" />
+    <Content Include="Scripts\ngsweetalert\sweetalert2.all.js" />
+    <Content Include="Scripts\ngsweetalert\sweetalert2.js" />
+    <Content Include="Scripts\recaptcha\angular-recaptcha.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\sammy-0.7.4.js" />
@@ -1281,6 +1296,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Logs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
